# academy-base

./: .pre-commit-config.yaml  Dockerfile  README.md  generate-requirements-full.sh  pyproject.toml  requirements-core.txt  requirements-full.txt
.circleci/: config.yml
