[tool.poetry]
name = "academy-base"
version = "1.0.0"
description = "Base docker image for all the batch specializations"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"
scikit-learn = "1.3.0"
matplotlib = "3.7.2"
nbgrader = "0.8.4"
seaborn = "0.12.2"
category-encoders = "2.6.2"
ldsagrader = "0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
